Ado.net exercise

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -12,6 +12,9 @@
     <add name="DBCS" 
          connectionString="data source=(localdb)\MSSQLLocalDB; database=sample1; integrated security=SSPI" 
          providerName="System.Data.SqlClient" />
+    <add name="DBCS2"
+         connectionString="data source=(localdb)\MSSQLLocalDB; database=sample2; integrated security=SSPI"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
